--- a/build.properties
+++ b/build.properties
@@ -5,11 +5,11 @@
 # impl.title - natural language description of your plugin (may contain spaces)
 # 
 
-dependency.bi-platform.revision=5.0.1
-dependency.pentaho-reporting.revision=5.0.1-stable
+dependency.bi-platform.revision=5.3.0.0-180
+dependency.pentaho-reporting.revision=5.3.0.0-180
 ivy.artifact.group=com.pentaho
 impl.title=fusion_plugin
-project.revision=3.0.7
+project.revision=3.0.8
 ivy.artifact.id=fusion_plugin
 
 ###########################################################################
@@ -19,4 +19,4 @@ ivy.artifact.id=fusion_plugin
 ###########################################################################
 
 # Pentaho Solutions directory
-dir.solutions=C:/Program Files/pentaho/server/biserver-ee/pentaho-solutions
+dir.solutions=/home/fusion/biserver-ce-5.3.0.0/pentaho-solutions
