--- a/ivy.xml
+++ b/ivy.xml
@@ -51,6 +51,7 @@
 	<dependency org="net.sf.ehcache"  name="ehcache"             rev="1.4.1" transitive='false' changing="true" />
 	<dependency org='commons-logging' name='commons-logging-api' rev='1.1'   transitive='true'  />
 	<dependency org="log4j"           name="log4j"               rev="1.2.9" />
+	<dependency org="commons-io"      name="commons-io"          rev="1.3.2" />
 
 	</dependencies>
 </ivy-module>
