--- a/build.properties
+++ b/build.properties
@@ -5,8 +5,10 @@
 # impl.title - natural language description of your plugin (may contain spaces)
 # 
 
-dependency.bi-platform.revision=5.3.0.0-180
-dependency.pentaho-reporting.revision=5.3.0.0-180
+dependency.bi-platform.revision=5.4.0.1-130
+dependency.pentaho-reporting.revision=5.4.0.1-130
+dependency.cpf.revision=5.4.0.1-130
+dependency.cpk.revision=5.3-SNAPSHOT
 ivy.artifact.group=com.pentaho
 impl.title=fusion_plugin
 project.revision=3.0.9
