Closed #148 Added FusionCharts XT example CDF dashboard

--- a/build.properties
+++ b/build.properties
@@ -21,4 +21,4 @@ ivy.artifact.id=fusion_plugin
 ###########################################################################
 
 # Pentaho Solutions directory
-dir.solutions=/home/fusion/biserver-ce-5.3/pentaho-solutions
+dir.solutions=/home/pentaho/fusion/biserver-ce/pentaho-solutions
