--- a/build.properties
+++ b/build.properties
@@ -5,13 +5,13 @@
 # impl.title - natural language description of your plugin (may contain spaces)
 # 
 
-dependency.bi-platform.revision=5.4.0.1-130
-dependency.pentaho-reporting.revision=5.4.0.1-130
-dependency.cpf.revision=5.4.0.1-130
-dependency.cpk.revision=5.3-SNAPSHOT
+dependency.bi-platform.revision=6.0.0.0-353
+dependency.pentaho-reporting.revision=6.0.0.0-353
+dependency.cpf.revision=6.1-SNAPSHOT
+dependency.cpk.revision=6.1-SNAPSHOT
 ivy.artifact.group=com.pentaho
 impl.title=fusion_plugin
-project.revision=3.0.10
+project.revision=4.0.0
 ivy.artifact.id=fusion_plugin
 
 ###########################################################################
