--- a/ivy.xml
+++ b/ivy.xml
@@ -47,6 +47,11 @@
 		<dependency org="log4j"           name="log4j"               rev="1.2.9" />
 		<dependency org='commons-logging' name='commons-logging-api' rev='1.1'   transitive='true'  />
 		<dependency org="commons-io"      name="commons-io"          rev="1.3.2" />
+		<dependency org="com.fasterxml.jackson.core"    name="jackson-annotations"    rev="2.2.2"     transitive="false"/>
+	    <dependency org="com.fasterxml.jackson.core"    name="jackson-core"           rev="2.2.2"     transitive="false"/>
+     	<dependency org="org.codehaus.jackson"          name="jackson-core-asl"       rev="1.8.2"     transitive="false"/>
+    	<dependency org="com.fasterxml.jackson.core"    name="jackson-databind"       rev="2.2.2"     transitive="false"/>
+     	<dependency org="org.codehaus.jackson"          name="jackson-mapper-asl"     rev="1.8.2"     transitive="false"/>
 
 	</dependencies>
 </ivy-module>
