--- a/package-res/plugin.xml
+++ b/package-res/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <plugin title="fusion_plugin" loader="DEFAULT">
-  
+
   <overlays>
 		<overlay id="startup.fusion_plugin" resourcebundle="content/xfusion/resources/lang/messages.properties">
 			<menubar id="toolsmenu">
@@ -9,11 +9,11 @@
 	      	</menubar>
 	    </overlay>
 	</overlays>
-  
+
   <lifecycle-listener class="com.xpandit.fusionplugin.pentaho.FcLifecycleListener"/>
   <!-- <lifecycle-listener class="pt.webdetails.cpk.CpkLifecycleListener"/>-->
- 
-  <content-types>   
+
+  <content-types>
       <static-paths>
 	      <static-path url="/xfusion/res" localFolder="resources"/>
 	      <static-path url="/xfusion/js" localFolder="js"/>
@@ -22,19 +22,19 @@
 	      <static-path url="/xfusion/widgets" localFolder="widgets"/>
 		  <static-path url="/xfusion/static" localFolder="static"/>
 		  <static-path url="/xfusion/resources" localFolder="resources"/>
-	  </static-paths> 
-  
+	  </static-paths>
+
   	  <content-type>
 			<title>xfusion</title>
 			<description></description>
 			<company name="" url="" logo="@PLUGIN_COMPANY_LOGO@"></company>
 		</content-type>
-		
+
 	  <content-type type="xfusion" mime-type="text/html">
 	    <title>Fusion Config</title>
 	    <description>Fusion Config File</description>
 	    <icon-url>content/xfusion/res/icon.jpg</icon-url>
-	    <meta-provider>com.xpandit.fusionplugin.pentaho.content.FusionContentTypeMetaProvider</meta-provider> 
+	    <meta-provider>com.xpandit.fusionplugin.pentaho.content.FusionContentTypeMetaProvider</meta-provider>
 	    <operations>
 	      <operation>
 	        <id>RUN</id>
@@ -42,17 +42,22 @@
 	    </operations>
 	  </content-type>
   </content-types>
-  
+
   <external-resources>
   	<!-- Integration with EE Dashboards-->
     <file context="dashboards">content/xfusion/js/XDashFusionChartComponent.js</file>
     <!-- Integration with Analyzer -->
-  	<file context="analyzer">content/xfusion/js/vizapi/fusioncharts_wrapper.js</file>    
+  	<file context="analyzer">content/xfusion/js/vizapi/fusioncharts_wrapper.js</file>
     <file context="analyzer">content/xfusion/js/vizapi/fusioncharts_analyzer_plugin.js</file>
     <!-- Required dependencies -->
     <file context="analyzer">content/xfusion/js/vizapi/chart_settings.js</file>
     <file context="analyzer">content/xfusion/JSClass/FusionCharts.js</file>
-   <!-- <file context="analyzer">content/xfusion/js/XDashFusionChartComponent.js</file> --> 
+    <!-- Themes -->
+    <file context="analyzer">content/xfusion/JSClass/themes/fusioncharts.theme.carbon.js</file>
+    <file context="analyzer">content/xfusion/JSClass/themes/fusioncharts.theme.fint.js</file>
+    <file context="analyzer">content/xfusion/JSClass/themes/fusioncharts.theme.ocean.js</file>
+    <file context="analyzer">content/xfusion/JSClass/themes/fusioncharts.theme.zune.js</file>
+   <!-- <file context="analyzer">content/xfusion/js/XDashFusionChartComponent.js</file> -->
   </external-resources>
 
 </plugin>
