--- a/build.properties
+++ b/build.properties
@@ -7,11 +7,11 @@
 
 dependency.bi-platform.revision=6.0.0.0-353
 dependency.pentaho-reporting.revision=6.0.0.0-353
-dependency.cpf.revision=6.1-SNAPSHOT
+dependency.cpf.revision=6.0.0.0-353
 dependency.cpk.revision=6.1-SNAPSHOT
 ivy.artifact.group=com.pentaho
 impl.title=fusion_plugin
-project.revision=4.2.1
+project.revision=4.2.2
 ivy.artifact.id=fusion_plugin
 
 ###########################################################################
