--- a/build.properties
+++ b/build.properties
@@ -5,10 +5,10 @@
 # impl.title - natural language description of your plugin (may contain spaces)
 #
 
-dependency.bi-platform.revision=6.0.0.0-353
-dependency.pentaho-reporting.revision=6.0.0.0-353
-dependency.cpf.revision=6.0.0.0-353
-dependency.cpk.revision=6.1-SNAPSHOT
+dependency.bi-platform.revision=6.1.0.1-196
+dependency.pentaho-reporting.revision=6.1.0.1-196
+dependency.cpf.revision=6.1.0.1-196
+dependency.cpk.revision=6.1.0.1-196
 ivy.artifact.group=com.pentaho
 impl.title=fusion_plugin
 project.revision=4.2.3
