--- a/build.xml
+++ b/build.xml
@@ -10,16 +10,20 @@
       <!-- Add jar files from dev lib -->
       <fileset file="${devlib.dir}/*.jar" />
       <fileset file="${dist.dir}/${ivy.artifact.id}-${project.revision}.jar" />
+      <fileset file="${lib.dir}/cpf-core-${dependency.cpf.revision}.jar" />
+      <fileset file="${lib.dir}/cpf-pentaho-${dependency.cpf.revision}.jar" />
+      <fileset file="${lib.dir}/cpk-core-${dependency.cpk.revision}.jar" />
+      <fileset file="${lib.dir}/cpk-pentaho5-${dependency.cpk.revision}.jar" />
     </copy>
   </target>
 
-  <target name="install" depends="install-plugin,install-samples,install-cdf-dd-res">	
+  <target name="install" depends="install-plugin,install-samples,install-cdf-dd-res">
   </target>
 
-  <target name="reinstall" depends="reinstall-plugin,reinstall-samples,install-cdf-dd-res">	
+  <target name="reinstall" depends="reinstall-plugin,reinstall-samples,install-cdf-dd-res">
   </target>
 
-  <target name="install-plugin" depends="dist,assemble.copy-libs"> 	
+  <target name="install-plugin" depends="dist,assemble.copy-libs">
     <copy todir="${dir.system}/${package.root.dir}" >
       <fileset dir="${approot.stage.dir}" />
     </copy>
@@ -36,8 +40,8 @@
   <!-- disabled on 5.0 -->
   <target name="install-samples">
   	<echo message="Install samples is disabled on 5.0"></echo>
-  </target> 
-	
+  </target>
+
   <!-- old version
     <target name="install-samples">
     <copy todir="${dir.solutions}" >
@@ -45,22 +49,22 @@
     </copy>
     <echo message="${dir.samples}"></echo>
     <echo message="${dir.solutions}"></echo>
-  </target> 
+  </target>
   -->
-  
+
 
   <target name="reinstall-samples">
     <echo message="Cleaning samples folder..."></echo>
     <delete dir="${dir.solutions}/bi-developers/fusion-charts"/>
     <antcall target="install-samples"/>
   </target>
-  
+
     <target name="install-cdf-dd-res">
     <copy todir="${dir.solutions}/system/pentaho-cdf-dd" >
       <fileset dir="${dir.cdf-dd-res}" />
     </copy>
     <echo message="${dir.cdf-dd-res}"></echo>
-    <echo message="${dir.solutions}"></echo> 
+    <echo message="${dir.solutions}"></echo>
   </target>
-  
+
 </project>
