--- a/ivy.xml
+++ b/ivy.xml
@@ -14,12 +14,17 @@
 	<dependencies>
 
 		<!-- cpf -->
-		<dependency org="pentaho" name="cpf-core"     rev="${dependency.cpf.revision}" transitive="false" changing="true"/>
-		<dependency org="pentaho" name="cpf-pentaho5" rev="${dependency.cpf.revision}" transitive="false" changing="true"/>
+		<dependency org="pentaho" name="cpf-core"     rev="${dependency.cpf.revision}" transitive="false" changing="true" conf="default;runtime"/>
+		<dependency org="pentaho" name="cpf-pentaho" rev="${dependency.cpf.revision}" transitive="false" changing="true" conf="default;runtime"/>
 
 		<!-- cpk -->
-		<dependency org="pentaho" name="cpk-core"     rev="${dependency.cpk.revision}" transitive="false" changing="true"/>
-		<dependency org="pentaho" name="cpk-pentaho5" rev="${dependency.cpk.revision}" transitive="false" changing="true"/>
+		<dependency org="pentaho" name="cpk-core"     rev="${dependency.cpk.revision}" transitive="false" changing="true" conf="default;runtime">
+			<artifact name="cpk-core" type="jar"/>
+		</dependency>
+		<dependency org="pentaho" name="cpk-pentaho5" rev="${dependency.cpk.revision}" transitive="false" changing="true"  conf="default;runtime">
+			<artifact name="cpk-pentaho5" type="jar"/>
+		</dependency>
+
 
 		<!-- Required to easily parse CDA results  -->
 		<dependency org="pentaho-reporting-engine" name="pentaho-reporting-engine-classic-extensions-cda" rev="${dependency.pentaho-reporting.revision}" transitive="false" changing="true" />
@@ -48,10 +53,10 @@
 		<dependency org='commons-logging' name='commons-logging-api' rev='1.1'   transitive='true'  />
 		<dependency org="commons-io"      name="commons-io"          rev="1.3.2" />
 		<dependency org="com.fasterxml.jackson.core"    name="jackson-annotations"    rev="2.2.2"     transitive="false"/>
-	    <dependency org="com.fasterxml.jackson.core"    name="jackson-core"           rev="2.2.2"     transitive="false"/>
-     	<dependency org="org.codehaus.jackson"          name="jackson-core-asl"       rev="1.8.2"     transitive="false"/>
-    	<dependency org="com.fasterxml.jackson.core"    name="jackson-databind"       rev="2.2.2"     transitive="false"/>
-     	<dependency org="org.codehaus.jackson"          name="jackson-mapper-asl"     rev="1.8.2"     transitive="false"/>
+	  <dependency org="com.fasterxml.jackson.core"    name="jackson-core"           rev="2.2.2"     transitive="false"/>
+    <dependency org="org.codehaus.jackson"          name="jackson-core-asl"       rev="1.8.2"     transitive="false"/>
+    <dependency org="com.fasterxml.jackson.core"    name="jackson-databind"       rev="2.2.2"     transitive="false"/>
+    <dependency org="org.codehaus.jackson"          name="jackson-mapper-asl"     rev="1.8.2"     transitive="false"/>
 
 	</dependencies>
 </ivy-module>
