Fusion with RequireJS

--- a/build.properties
+++ b/build.properties
@@ -5,13 +5,13 @@
 # impl.title - natural language description of your plugin (may contain spaces)
 #
 
-dependency.bi-platform.revision=6.1.0.1-196
-dependency.pentaho-reporting.revision=6.1.0.1-196
-dependency.cpf.revision=6.1.0.1-196
-dependency.cpk.revision=6.1.0.1-196
+dependency.bi-platform.revision=7.1-SNAPSHOT
+dependency.pentaho-reporting.revision=7.1-SNAPSHOT
+dependency.cpf.revision=7.1-SNAPSHOT
+dependency.cpk.revision=7.1-SNAPSHOT
 ivy.artifact.group=com.pentaho
 impl.title=fusion_plugin
-project.revision=4.2.3
+project.revision=5.0.0
 ivy.artifact.id=fusion_plugin
 
 ###########################################################################
@@ -21,4 +21,4 @@ ivy.artifact.id=fusion_plugin
 ###########################################################################
 
 # Pentaho Solutions directory
-dir.solutions=/home/nimg/pentaho/biserver-ce/pentaho-solutions
+dir.solutions=/home/nuno/Pentaho/7.1-CE/pentaho-server/pentaho-solutions
