--- a/build.properties
+++ b/build.properties
@@ -5,10 +5,10 @@
 # impl.title - natural language description of your plugin (may contain spaces)
 #
 
-dependency.bi-platform.revision=7.1-SNAPSHOT
-dependency.pentaho-reporting.revision=7.1-SNAPSHOT
-dependency.cpf.revision=7.1-SNAPSHOT
-dependency.cpk.revision=7.1-SNAPSHOT
+dependency.bi-platform.revision=7.1.0.0-12
+dependency.pentaho-reporting.revision=7.0.0.6-91
+dependency.cpf.revision=7.1.0.0-12
+dependency.cpk.revision=7.1.0.0-12
 ivy.artifact.group=com.pentaho
 impl.title=fusion_plugin
 project.revision=5.0.0
@@ -21,4 +21,9 @@ ivy.artifact.id=fusion_plugin
 ###########################################################################
 
 # Pentaho Solutions directory
-dir.solutions=/home/nuno/Pentaho/7.1-CE/pentaho-server/pentaho-solutions
+# E.g. Windows: C:\\Pentaho\\server\\pentaho-server\\pentaho-solutions
+# E.g. Unix: /opt/Pentaho/server/pentaho-server/pentaho-solutions
+#
+# Note: do not end path with / (slash).
+#
+dir.solutions=C:\\Pentaho7-1\\server\\pentaho-server\\pentaho-solutions
