--- a/build.xml
+++ b/build.xml
@@ -2,8 +2,8 @@
 <!-- Import the subfloor-pkg.xml file which contains all the default ant targets -->
   <import file="build-res/subfloor-pkg.xml" />
   <property name="dir.system" value="${dir.solutions}/system"/>
-  <property name="dir.samples" value="fusion-samples/"/>
-  <property name="dir.cdf-dd-res" value="pentaho-cdf-dd-package-res/"/>
+  <property name="dir.samples" value="fusion-samples"/>
+  <property name="dir.cdf-dd-res" value="pentaho-cdf-dd-package-res"/>
 
   <target name="assemble.copy-libs">
     <copy todir="${approot.stage.dir}/lib">
@@ -37,34 +37,27 @@
     <antcall target="install-plugin"/>
   </target>
 
-  <!-- disabled on 5.0 -->
   <target name="install-samples">
-  	<echo message="Install samples is disabled on 5.0"></echo>
-  </target>
-
-  <!-- old version
-    <target name="install-samples">
-    <copy todir="${dir.solutions}" >
-      <fileset dir="${dir.samples}/*" />
+    <echo message="Copying samples from ./${dir.samples}/plugin-samples/fusion-charts"></echo>
+    <echo message="To ${dir.solutions}/plugin-samples/fusion-charts"></echo>
+    <copy todir="${dir.solutions}/plugin-samples/fusion-charts">
+      <fileset dir="${dir.samples}/plugin-samples/fusion-charts"/>
     </copy>
-    <echo message="${dir.samples}"></echo>
-    <echo message="${dir.solutions}"></echo>
+  	<echo message="Warning: Only tested on 7.1!"></echo>
   </target>
-  -->
-
 
   <target name="reinstall-samples">
     <echo message="Cleaning samples folder..."></echo>
-    <delete dir="${dir.solutions}/bi-developers/fusion-charts"/>
+    <delete dir="${dir.solutions}/plugin-samples/fusion-charts"/>
     <antcall target="install-samples"/>
   </target>
 
-    <target name="install-cdf-dd-res">
-    <copy todir="${dir.solutions}/system/pentaho-cdf-dd" >
+  <target name="install-cdf-dd-res">
+    <echo message="Copying samples from ./${dir.cdf-dd-res}"></echo>
+    <echo message="To ${dir.solutions}/system/pentaho-cdf-dd"></echo>
+    <copy todir="${dir.solutions}/system/pentaho-cdf-dd" overwrite="true">
       <fileset dir="${dir.cdf-dd-res}" />
     </copy>
-    <echo message="${dir.cdf-dd-res}"></echo>
-    <echo message="${dir.solutions}"></echo>
   </target>
 
 </project>
