--- a/package-res/plugin.xml
+++ b/package-res/plugin.xml
@@ -15,7 +15,6 @@
 
   <content-types>
       <static-paths>
-	      <static-path url="/xfusion/res" localFolder="resources"/>
 	      <static-path url="/xfusion/js" localFolder="js"/>
 	      <static-path url="/xfusion/JSClass" localFolder="fusioncharts/JSClass"/>
 	      <static-path url="/xfusion/swf" localFolder="fusioncharts/charts"/>
@@ -33,7 +32,7 @@
 	  <content-type type="xfusion" mime-type="text/html">
 	    <title>Fusion Config</title>
 	    <description>Fusion Config File</description>
-	    <icon-url>content/xfusion/res/icon.jpg</icon-url>
+	    <icon-url>content/xfusion/resources/icon.jpg</icon-url>
 	    <meta-provider>com.xpandit.fusionplugin.pentaho.content.FusionContentTypeMetaProvider</meta-provider>
 	    <operations>
 	      <operation>
@@ -46,7 +45,8 @@
   <external-resources>
 		<file context="requirejs">content/xfusion/resources/fusion-plugin-require-js-cfg.js</file>
   	<!-- Integration with EE Dashboards-->
-    <!--<file context="dashboards">content/xfusion/js/XDashFusionChartComponent.js</file>-->
+    <!-- need test comm-->
+    <!-- <file context="dashboards">content/xfusion/js/XDashFusionChartComponentRequireJS.js</file> -->
     <!-- Integration with Analyzer -->
   	<file context="analyzer">content/xfusion/js/vizapi/fusioncharts_wrapper.js</file>
     <file context="analyzer">content/xfusion/js/vizapi/fusioncharts_analyzer_plugin.js</file>
@@ -58,7 +58,7 @@
     <file context="analyzer">content/xfusion/JSClass/themes/fusioncharts.theme.fint.js</file>
     <file context="analyzer">content/xfusion/JSClass/themes/fusioncharts.theme.ocean.js</file>
     <file context="analyzer">content/xfusion/JSClass/themes/fusioncharts.theme.zune.js</file>
-   <!-- <file context="analyzer">content/xfusion/js/XDashFusionChartComponent.js</file> -->
+    <!-- <file context="analyzer">content/xfusion/js/XDashFusionChartComponent.js</file>-->
   </external-resources>
 
 </plugin>
