--- a/build.properties
+++ b/build.properties
@@ -11,7 +11,7 @@ dependency.cpf.revision=6.1.0.1-196
 dependency.cpk.revision=6.1.0.1-196
 ivy.artifact.group=com.pentaho
 impl.title=fusion_plugin
-project.revision=4.2.3
+project.revision=4.2.4
 ivy.artifact.id=fusion_plugin
 
 ###########################################################################
@@ -21,4 +21,4 @@ ivy.artifact.id=fusion_plugin
 ###########################################################################
 
 # Pentaho Solutions directory
-dir.solutions=/home/nimg/pentaho/biserver-ce/pentaho-solutions
+dir.solutions=C:\\Pentaho6-1\\server\\biserver-ee\\pentaho-solutions
