--- a/ivy.xml
+++ b/ivy.xml
@@ -18,10 +18,10 @@
 		<dependency org="pentaho" name="cpf-pentaho" rev="${dependency.cpf.revision}" transitive="false" changing="true" conf="default;runtime"/>
 
 		<!-- cpk -->
-		<dependency org="pentaho" name="cpk-core"     rev="${dependency.cpk.revision}" transitive="false" changing="true" conf="default;runtime">
+		<dependency org="org.pentaho.ctools" name="cpk-core"     rev="${dependency.cpk.revision}" transitive="false" changing="true" conf="default;runtime">
 			<artifact name="cpk-core" type="jar"/>
 		</dependency>
-		<dependency org="pentaho" name="cpk-pentaho5" rev="${dependency.cpk.revision}" transitive="false" changing="true"  conf="default;runtime">
+		<dependency org="org.pentaho.ctools" name="cpk-pentaho5" rev="${dependency.cpk.revision}" transitive="false" changing="true"  conf="default;runtime">
 			<artifact name="cpk-pentaho5" type="jar"/>
 		</dependency>
 
@@ -54,9 +54,9 @@
 		<dependency org="commons-io"      name="commons-io"          rev="1.3.2" />
 		<dependency org="com.fasterxml.jackson.core"    name="jackson-annotations"    rev="2.2.2"     transitive="false"/>
 	  <dependency org="com.fasterxml.jackson.core"    name="jackson-core"           rev="2.2.2"     transitive="false"/>
-    <dependency org="org.codehaus.jackson"          name="jackson-core-asl"       rev="1.8.2"     transitive="false"/>
+    <dependency org="org.codehaus.jackson"          name="jackson-core-asl"       rev="1.9.12"     transitive="false"/>
     <dependency org="com.fasterxml.jackson.core"    name="jackson-databind"       rev="2.2.2"     transitive="false"/>
-    <dependency org="org.codehaus.jackson"          name="jackson-mapper-asl"     rev="1.8.2"     transitive="false"/>
+    <dependency org="org.codehaus.jackson"          name="jackson-mapper-asl"     rev="1.9.12"     transitive="false"/>
 
 	</dependencies>
 </ivy-module>
